--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: La Analytica 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I, Xavier Josephs, am a first-generation Afro-Latino man currently studying Natural Resources & Environmental Science with a concentration Environmental Science & Management along with a minor in Informatics at the University of Illinois Urbana-Champaign.
+
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,15 +19,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: xavierjosephs@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/xjosep2 
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/xavier-josephs/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
