--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   email: xavierjosephs@gmail.com
   facebook:
   flickr:
-  github: https://github.com/xjosep2 
+  github: github.com/xjosep2 
   instagram:
   linkedin: https://www.linkedin.com/in/xavier-josephs/
   pinterest:
