--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: I, Xavier Josephs, am a first-generation Afro-Latino man currently 
 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/xjosep2/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -22,9 +22,9 @@ footer-links:
   email: xavierjosephs@gmail.com
   facebook:
   flickr:
-  github: github.com/xjosep2 
+  github: xjosep2 
   instagram:
-  linkedin: https://www.linkedin.com/in/xavier-josephs/
+  linkedin: xavier-josephs
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
