--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: I, Xavier Josephs, am a first-generation Afro-Latino man currently 
 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/IMG_3845_Original.jpeg
+avatar: https://github.com/xjosep2/xjosep2.github.io/blob/master/images/IMG_3845_Original.jpeg
 
 #
 # Flags below are optional
