--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@ description: I, Xavier Josephs, am a first-generation Afro-Latino man currently 
 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/xjosep2/xjosep2.github.io/blob/master/images/IMG_3845_Original.png
-
+avatar: https://raw.githubusercontent.com/xjosep2/xjosep2.github.io/master/images/IMG_3845_Original.png
 #
 # Flags below are optional
 #
