--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: La Analytica 
+name: La Analítica 
 
 # Short bio or description (displayed in the header)
 description: I, Xavier Josephs, am a first-generation Afro-Latino man currently studying Natural Resources & Environmental Science with a concentration Environmental Science & Management along with a minor in Informatics at the University of Illinois Urbana-Champaign.
